Tue Nov 15 17:35:01 UTC 2005	20051115	Kyle Sallee

Fixes for compilation warnings.
Turned off some slowing debugging counters.
Modified default optimization from -O3 to -Os
because it causes much faster patch generation
by conserving memory.


Thu Jul  7 00:02:26 UTC 2005	20050707	Kyle Sallee

Berlios squeezed out the PPR by enforcing their 99M file system quota.
The PPR now runs at http://ppr.aakin.net
This release updates the client for the new server location.


Mon Jun 27 22:47:34 UTC 2005	20050627	Kyle Sallee

A new verion of file was released that
identifies 7za archives with a different string.
Therefore, sd3 was updated to recgonize both how
the old and new versions of file report 7-zip archives.


Wed Jun  1 05:40:29 UTC 2005	20050601	Kyle Sallee

sdreq now checks for patches and optimally compressed
source tarballs on both berlios's ftp and http servers.
That way if the http server is down the ftp server can
be checked to see if the desired file is already present.
The PPR now only accepts requests for sd3 patch generation.


Sun May 29 21:51:53 UTC 2005	20050529	Kyle Sallee

The documentation now reflects sdelta3.
Updated the sdreq client and sd3 wrapper.
sd was renamed sd3.
This release should be good for use with
the PPR if I did not bug sd3 or sdreq.
Finally, we can all enjoy the smaller 
7za compressed sdelta3 patches.

Cron is still not running at berlios.
Patches generation may take up to 24
hours depending on whether I am 
manually running the server.


Sat May 28 08:26:36 UTC 2005	no release yet	Kyle Sallee

I implemented minor tuning to blocks.c and sdelta3.c
that overall produces smaller compressed patches.
Pavel Gorshkov added support for both gnutls 1.2.x and 1.0.x
I modified the Makefiles to automatically compile and
link sdelta3 with available libraries that it requires.
Few modifications are left before sdelta3 is released.
sdreq should be modified to automatically request and
download 7za compressed sdelta3 patches.
